--- a/baleto-pamokos.html
+++ b/baleto-pamokos.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><!--  Last Published: Fri Oct 25 2024 09:03:30 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="66eec62f2fa59c2dc1325447" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
+<html data-wf-page="670feb693f3482d4a4db0e01" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
-  <title>Šiuolaikinio Šokio Ir Baleto Studija Vilniuje - KUNU</title>
-  <meta content="Atraskite šiuolaikinį šokį Vilniuje! Šiuolaikinio šokio ir baleto studija kviečia vaikus ir suaugusius tobulinti judesių meną su profesionaliais treneriais." name="description">
-  <meta content="Šiuolaikinio Šokio Ir Baleto Studija Vilniuje - KUNU" property="og:title">
-  <meta content="Atraskite šiuolaikinį šokį Vilniuje! Šiuolaikinio šokio ir baleto studija kviečia vaikus ir suaugusius tobulinti judesių meną su profesionaliais treneriais." property="og:description">
+  <title>Baleto Pamokos Vilnuje</title>
+  <meta content="Mokykitės baleto Vilniuje! Baleto pamokos vaikams ir suaugusiems, tinkamos pradedantiesiems ir pažengusiems, suteiks elegancijos ir grakštumo jūsų judesiams." name="description">
+  <meta content="Baleto Pamokos Vilnuje" property="og:title">
+  <meta content="Mokykitės baleto Vilniuje! Baleto pamokos vaikams ir suaugusiems, tinkamos pradedantiesiems ir pažengusiems, suteiks elegancijos ir grakštumo jūsų judesiams." property="og:description">
   <meta content="https://cdn.prod.website-files.com/66eec62f2fa59c2dc13253bb/66ef0503437bd4e8eab647e7_456967253_122100798206495936_2476309423794841411_n.jpg" property="og:image">
-  <meta content="Šiuolaikinio Šokio Ir Baleto Studija Vilniuje - KUNU" property="twitter:title">
-  <meta content="Atraskite šiuolaikinį šokį Vilniuje! Šiuolaikinio šokio ir baleto studija kviečia vaikus ir suaugusius tobulinti judesių meną su profesionaliais treneriais." property="twitter:description">
+  <meta content="Baleto Pamokos Vilnuje" property="twitter:title">
+  <meta content="Mokykitės baleto Vilniuje! Baleto pamokos vaikams ir suaugusiems, tinkamos pradedantiesiems ir pažengusiems, suteiks elegancijos ir grakštumo jūsų judesiams." property="twitter:description">
   <meta content="https://cdn.prod.website-files.com/66eec62f2fa59c2dc13253bb/66ef0503437bd4e8eab647e7_456967253_122100798206495936_2476309423794841411_n.jpg" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -23,7 +23,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <link href="https://kunu.studio/" rel="canonical">
+  <link href="https://kunu.studio/baleto-pamokos" rel="canonical">
   <style>
 * {
 -webkit-font-smoothing: antialiased;
@@ -210,7 +210,7 @@ margin: 0rem !important;
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-out" role="banner" class="nav3_component w-nav">
       <div class="nav3_container">
-        <a href="index.html" aria-current="page" class="nav3_logo-link w-nav-brand w--current"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
+        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
         <nav role="navigation" class="nav3_menu w-nav-menu">
           <div data-hover="false" data-delay="0" class="nav3_dropdown w-dropdown">
             <div class="nav3_dropdown_toggle w-dropdown-toggle">
@@ -222,7 +222,7 @@ margin: 0rem !important;
             <nav class="nav3_dropdown_list w-dropdown-list">
               <a href="sokio-pamokos.html" class="nav3_link w-dropdown-link">šokio Stiliai ir Pamokos</a>
               <a href="siuolaikinio-sokio-pamokos.html" class="nav3_link w-dropdown-link">Šiuolaikinio Šokio Pamokos</a>
-              <a href="baleto-pamokos.html" class="nav3_link w-dropdown-link">Baleto Pamokos</a>
+              <a href="baleto-pamokos.html" aria-current="page" class="nav3_link w-dropdown-link w--current">Baleto Pamokos</a>
               <a href="privacios-sokio-pamokos-ir-choreografija.html" class="nav3_link w-dropdown-link">Privačios Pamokos</a>
               <a href="https://vestuviniaisokiai.lt" target="_blank" class="nav3_link new_page w-dropdown-link">Vestuvinio Šokio Pamokos</a>
             </nav>
@@ -249,32 +249,18 @@ margin: 0rem !important;
       </div>
     </div>
     <main class="main-wrapper">
-      <section class="section_layout5">
-        <div class="hero_bg">
-          <div class="layout5_background">
-            <div class="padding-global">
-              <div class="home_box">
-                <div class="container-small">
-                  <div class="text-align-center">
-                    <h1 class="heading-style-h1 text-style-allcaps">Šiuolaikinio Šokio ir Baleto Studija &quot;KuN/U&quot;</h1>
-                    <div class="padding-bottom padding-small"></div>
-                    <p>Šokio ir judesio kokybė, meninis ugdymas, asmeninė šokio kalba, jos tobulinimas ir kūrybiniai horizontai.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
       <section class="section_hero-secondary">
         <div class="padding-global">
-          <div>
-            <div class="padding-section-xlarge">
-              <div class="container-large">
-                <h1>Šiuolaikinio Šokio ir Baleto Studija &quot;KUN/U&quot;</h1>
-                <div class="padding-bottom padding-small"></div>
-                <p>Šokio ir judesio kokybė, meninis ugdymas, asmeninė šokio kalba, jos tobulinimas ir kūrybiniai horizontai.</p>
-                <div class="padding-bottom padding-medium"></div>
+          <div class="container-large">
+            <div class="padding-section-large">
+              <div class="layout2_component">
+                <div class="layout2_content">
+                  <h1>Baleto Pamokos Vilniuje</h1>
+                  <div class="padding-bottom padding-small"></div>
+                  <p>Baletas yra klasikinis šokio žanras, žinomas dėl savo tikslumo, grakštumo ir griežtos technikos. Apibrėžtas griežtu judesių ir pozicijų žodynu, baletas laikosi formalizuotų taisyklių, pabrėžiančių kontrolę, eleganciją ir simetriją. <br><br>Skirtingai nuo laisvesnių šokio formų, baletas orientuojasi į rafinuotus, disciplinuotus judesius, kurie dažnai atitinka nusistovėjusias tradicijas, tokias kaip šokis ant puantų, piruėtus ir didelius šuolius.</p>
+                  <div class="padding-bottom padding-medium"></div>
+                </div>
+                <div class="layout2_image-wrapper"><img src="images/pexels-cottonbro-10640395.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, 44vw" srcset="images/pexels-cottonbro-10640395-p-500.jpg 500w, images/pexels-cottonbro-10640395.jpg 640w" alt="Baleto Pamoka" class="layout2_image"></div>
               </div>
             </div>
           </div>
@@ -284,32 +270,17 @@ margin: 0rem !important;
         <div class="padding-global">
           <div class="container-large">
             <div class="padding-section-large">
-              <div class="pamoku_grid">
+              <div class="pamoku_grid two_rows">
                 <div class="layout3_content">
-                  <h2 class="heading-style-h3">Šokio Pamokos </h2>
+                  <h2 class="heading">Baleto Pamokos Vaikams</h2>
                   <div class="padding-bottom padding-small"></div>
-                  <p class="paragraph">KUN/U studijoje vedame pamokas vaikams, paaugliams ir suaugusiems. Turime šiuolaikinio šokio ir baleto grupes, taip pat siūlome privačias pamokas.</p>
-                  <div class="button-wrapper">
-                    <a href="sokio-pamokos.html" class="button w-button">Šokių Pamokos ir Stiliai</a>
-                  </div>
+                  <p class="paragraph">Užsiėmimų metu jaunieji šokėjai ne tik lavins savo koordinaciją ir fizinį stiprumą, bet ir ugdys vaizduotę, pasitikėjimą savimi bei komandinio darbo įgūdžius. Šokdami pagal įvairią šiuolaikinę muziką ir atlikdami žaidybinio pobūdžio pratimus, jie atras judesio džiaugsmą ir mokysis išreikšti emocijas per kūną. Pamokos pritaikytos kiekvieno vaiko gebėjimams ir skatina laisvą kūrybiškumą bei smalsumą!<br><br>Užsiemimai vyksta pirmadieniais ir trečiadieniais.</p>
                   <div class="padding-bottom padding-medium"></div>
                 </div>
-                <div id="w-node-_36204aaf-5734-1541-e6d3-3c25c2fbc3a7-c1325447" class="layout3_content">
-                  <h2 class="heading-style-h3">Šokio Studijos Nuoma</h2>
+                <div id="w-node-_03879c4e-7e23-36a6-474a-1841d8d51f76-a4db0e01" class="layout3_content">
+                  <h2 class="heading">Baleto Pamokos Suaugusiems</h2>
                   <div class="padding-bottom padding-small"></div>
-                  <p class="paragraph">Pilnai įrengta šokių studija su profesionalia šokių danga, garso sistema, veidrodžiais, persirengimo zona. Puikiai tinka repeticijoms ir kitiem renginiam. </p>
-                  <div class="button-wrapper">
-                    <a href="sokiu-studijos-nuoma-vilniuje.html" class="button w-button">Studijos Nuoma</a>
-                  </div>
-                  <div class="padding-bottom padding-medium"></div>
-                </div>
-                <div id="w-node-_36204aaf-5734-1541-e6d3-3c25c2fbc3b0-c1325447" class="layout3_content">
-                  <h2 class="heading-style-h3">Choreografijos Kūrimas</h2>
-                  <div class="padding-bottom padding-small"></div>
-                  <p class="paragraph">Dirbkite su profesionalia choreografe susikurti judesio kūrinį skirta tik Jums. Turime parities dirbant su muzikantais, teatro ir kitais atlikėjais. </p>
-                  <div class="button-wrapper">
-                    <a href="privacios-sokio-pamokos-ir-choreografija.html" class="button w-button">Choreografijos Kūrimas</a>
-                  </div>
+                  <p class="paragraph">Pamokos skirtos tiems, kurie nori geriau suprasti ir pajusti savo kūno veikimą. Šokdami pagal šiuolaikinę muziką, palaipsniui mokomės įvairių judesių, judame erdvėje ir stipriname fizinę ištvermę. Remdamiesi teatrinėmis ir šiuolaikinio šokio praktikomis, ugdome vaizduotę, išlaisviname kūrybiškumą, tobuliname koordinaciją ir stipriname emocinį intelektą.<br><br>Užsiemimai vyksta pirmadieniais ir trečiadieniais.</p>
                   <div class="padding-bottom padding-medium"></div>
                 </div>
               </div>
@@ -377,7 +348,7 @@ margin: 0rem !important;
                   <div>Manufaktūrų g. 16, Vilnius, 11342 Vilniaus m. sav.</div>
                 </div>
                 <div id="contact2-form" class="contact2_form-wrapper w-form">
-                  <form method="post" class="contact2_form" data-netlify="true" name="wf-form-Form" data-name="Form" action="/aciu" id="wf-form-Form" redirect="https://kunu.studio/aciu" data-redirect="https://kunu.studio/aciu" data-wf-page-id="66eec62f2fa59c2dc1325447" data-wf-element-id="ca1f792b-a5d4-d265-6cb1-5636eb21a275">
+                  <form method="post" class="contact2_form" data-netlify="true" name="wf-form-Form" data-name="Form" action="/aciu" id="wf-form-Form" redirect="https://kunu.studio/aciu" data-redirect="https://kunu.studio/aciu" data-wf-page-id="670feb693f3482d4a4db0e01" data-wf-element-id="ca1f792b-a5d4-d265-6cb1-5636eb21a275">
                     <div class="form_field-wrapper"><label for="Name-2" class="form_label">Vardas*</label><input class="form_input w-input" maxlength="256" name="Name-2" data-name="Name 2" placeholder="Jūsų vardas" type="text" id="Name-2" required=""></div>
                     <div class="form_field-wrapper"><label for="Email-2" class="form_label">El. paštas*</label><input class="form_input w-input" maxlength="256" name="Email-2" data-name="Email 2" placeholder="Jūsų el.paštas" type="email" id="Email-2" required=""></div>
                     <div id="w-node-ca1f792b-a5d4-d265-6cb1-5636eb21a27e-eb21a26f" class="form_field-wrapper"><label for="Telefonas-2" class="form_label">Telefono numeris</label><input class="form_input w-input" maxlength="256" name="Telefonas-2" data-name="Telefonas 2" placeholder="Jūsų telefonas" type="text" id="Telefonas-2"></div>
@@ -446,7 +417,7 @@ margin: 0rem !important;
                   <div class="footer1_link_list">
                     <a href="sokio-pamokos.html" class="footer1_link">Šokio Stiliai ir Pamokos</a>
                     <a href="siuolaikinio-sokio-pamokos.html" class="footer1_link">Šiuolaikinio Šokio Pamokos</a>
-                    <a href="baleto-pamokos.html" class="footer1_link">Baleto Pamokos</a>
+                    <a href="baleto-pamokos.html" aria-current="page" class="footer1_link w--current">Baleto Pamokos</a>
                     <a href="privacios-sokio-pamokos-ir-choreografija.html" class="footer1_link">Privačios Šokio Pamokos</a>
                   </div>
                 </div>
