--- a/kontaktai.html
+++ b/kontaktai.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><!--  Last Published: Fri Oct 25 2024 09:03:30 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="66eec62f2fa59c2dc1325447" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
+<html data-wf-page="671a5f0bafe22a243c3fd126" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
-  <title>Šiuolaikinio Šokio Ir Baleto Studija Vilniuje - KUNU</title>
-  <meta content="Atraskite šiuolaikinį šokį Vilniuje! Šiuolaikinio šokio ir baleto studija kviečia vaikus ir suaugusius tobulinti judesių meną su profesionaliais treneriais." name="description">
-  <meta content="Šiuolaikinio Šokio Ir Baleto Studija Vilniuje - KUNU" property="og:title">
-  <meta content="Atraskite šiuolaikinį šokį Vilniuje! Šiuolaikinio šokio ir baleto studija kviečia vaikus ir suaugusius tobulinti judesių meną su profesionaliais treneriais." property="og:description">
+  <title>Kontaktai</title>
+  <meta content="Šiuolaikinio šokio pamokos Vilniuje – puiki galimybė vaikams ir suaugusiems atrasti laisvą judesių kalbą bei kurti savo unikalų šokio stilių." name="description">
+  <meta content="Kontaktai" property="og:title">
+  <meta content="Šiuolaikinio šokio pamokos Vilniuje – puiki galimybė vaikams ir suaugusiems atrasti laisvą judesių kalbą bei kurti savo unikalų šokio stilių." property="og:description">
   <meta content="https://cdn.prod.website-files.com/66eec62f2fa59c2dc13253bb/66ef0503437bd4e8eab647e7_456967253_122100798206495936_2476309423794841411_n.jpg" property="og:image">
-  <meta content="Šiuolaikinio Šokio Ir Baleto Studija Vilniuje - KUNU" property="twitter:title">
-  <meta content="Atraskite šiuolaikinį šokį Vilniuje! Šiuolaikinio šokio ir baleto studija kviečia vaikus ir suaugusius tobulinti judesių meną su profesionaliais treneriais." property="twitter:description">
+  <meta content="Kontaktai" property="twitter:title">
+  <meta content="Šiuolaikinio šokio pamokos Vilniuje – puiki galimybė vaikams ir suaugusiems atrasti laisvą judesių kalbą bei kurti savo unikalų šokio stilių." property="twitter:description">
   <meta content="https://cdn.prod.website-files.com/66eec62f2fa59c2dc13253bb/66ef0503437bd4e8eab647e7_456967253_122100798206495936_2476309423794841411_n.jpg" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -23,7 +23,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <link href="https://kunu.studio/" rel="canonical">
+  <link href="https://kunu.studio/kontaktai" rel="canonical">
   <style>
 * {
 -webkit-font-smoothing: antialiased;
@@ -210,7 +210,7 @@ margin: 0rem !important;
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-out" role="banner" class="nav3_component w-nav">
       <div class="nav3_container">
-        <a href="index.html" aria-current="page" class="nav3_logo-link w-nav-brand w--current"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
+        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
         <nav role="navigation" class="nav3_menu w-nav-menu">
           <div data-hover="false" data-delay="0" class="nav3_dropdown w-dropdown">
             <div class="nav3_dropdown_toggle w-dropdown-toggle">
@@ -239,7 +239,7 @@ margin: 0rem !important;
           <a href="projektai.html" class="nav3_link w-inline-block">
             <div>PRojektai</div>
           </a>
-          <a href="kontaktai.html" class="nav3_link w-inline-block">
+          <a href="kontaktai.html" aria-current="page" class="nav3_link w-inline-block w--current">
             <div>Kontaktai</div>
           </a>
         </nav>
@@ -249,106 +249,6 @@ margin: 0rem !important;
       </div>
     </div>
     <main class="main-wrapper">
-      <section class="section_layout5">
-        <div class="hero_bg">
-          <div class="layout5_background">
-            <div class="padding-global">
-              <div class="home_box">
-                <div class="container-small">
-                  <div class="text-align-center">
-                    <h1 class="heading-style-h1 text-style-allcaps">Šiuolaikinio Šokio ir Baleto Studija &quot;KuN/U&quot;</h1>
-                    <div class="padding-bottom padding-small"></div>
-                    <p>Šokio ir judesio kokybė, meninis ugdymas, asmeninė šokio kalba, jos tobulinimas ir kūrybiniai horizontai.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="section_hero-secondary">
-        <div class="padding-global">
-          <div>
-            <div class="padding-section-xlarge">
-              <div class="container-large">
-                <h1>Šiuolaikinio Šokio ir Baleto Studija &quot;KUN/U&quot;</h1>
-                <div class="padding-bottom padding-small"></div>
-                <p>Šokio ir judesio kokybė, meninis ugdymas, asmeninė šokio kalba, jos tobulinimas ir kūrybiniai horizontai.</p>
-                <div class="padding-bottom padding-medium"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="section_layout3">
-        <div class="padding-global">
-          <div class="container-large">
-            <div class="padding-section-large">
-              <div class="pamoku_grid">
-                <div class="layout3_content">
-                  <h2 class="heading-style-h3">Šokio Pamokos </h2>
-                  <div class="padding-bottom padding-small"></div>
-                  <p class="paragraph">KUN/U studijoje vedame pamokas vaikams, paaugliams ir suaugusiems. Turime šiuolaikinio šokio ir baleto grupes, taip pat siūlome privačias pamokas.</p>
-                  <div class="button-wrapper">
-                    <a href="sokio-pamokos.html" class="button w-button">Šokių Pamokos ir Stiliai</a>
-                  </div>
-                  <div class="padding-bottom padding-medium"></div>
-                </div>
-                <div id="w-node-_36204aaf-5734-1541-e6d3-3c25c2fbc3a7-c1325447" class="layout3_content">
-                  <h2 class="heading-style-h3">Šokio Studijos Nuoma</h2>
-                  <div class="padding-bottom padding-small"></div>
-                  <p class="paragraph">Pilnai įrengta šokių studija su profesionalia šokių danga, garso sistema, veidrodžiais, persirengimo zona. Puikiai tinka repeticijoms ir kitiem renginiam. </p>
-                  <div class="button-wrapper">
-                    <a href="sokiu-studijos-nuoma-vilniuje.html" class="button w-button">Studijos Nuoma</a>
-                  </div>
-                  <div class="padding-bottom padding-medium"></div>
-                </div>
-                <div id="w-node-_36204aaf-5734-1541-e6d3-3c25c2fbc3b0-c1325447" class="layout3_content">
-                  <h2 class="heading-style-h3">Choreografijos Kūrimas</h2>
-                  <div class="padding-bottom padding-small"></div>
-                  <p class="paragraph">Dirbkite su profesionalia choreografe susikurti judesio kūrinį skirta tik Jums. Turime parities dirbant su muzikantais, teatro ir kitais atlikėjais. </p>
-                  <div class="button-wrapper">
-                    <a href="privacios-sokio-pamokos-ir-choreografija.html" class="button w-button">Choreografijos Kūrimas</a>
-                  </div>
-                  <div class="padding-bottom padding-medium"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="section_komanda">
-        <div class="padding-global">
-          <div class="container-large">
-            <div class="padding-section-large">
-              <h2>Mūsų Komanda</h2>
-              <div class="padding-bottom padding-medium"></div>
-              <div class="team4_component">
-                <div class="team4_list">
-                  <div class="team4_item">
-                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.33.20.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-18.33.20-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.33.20-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.33.20.jpg 922w" alt="Egle Ukanyte" class="team4_image"></div>
-                    <div class="text-size-medium text-weight-bold">Eglė Ukanytė</div>
-                    <div class="text-size-medium">Studijos Įkūrėja, Choreografė ir Šiuolaikinio Šokio Mokytoja</div>
-                  </div>
-                  <div id="w-node-a58612d7-61d4-e9bf-6fe8-94ffbf1937ca-bf1937ba" class="team4_item">
-                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-20.27.50.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-20.27.50-p-500.jpg 500w, images/Screenshot-2024-09-21-at-20.27.50.jpg 658w" alt="Egle Kraujale" class="team4_image"></div>
-                    <div class="text-size-medium text-weight-bold">Eglė Kraujalė</div>
-                    <div class="text-size-medium">Šokio Judesio Praktikos Mokytoja</div>
-                  </div>
-                  <div id="w-node-a58612d7-61d4-e9bf-6fe8-94ffbf1937d1-bf1937ba" class="team4_item">
-                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.59.42.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-18.59.42-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.59.42.jpg 591w" alt="Jovita" class="team4_image"></div>
-                    <div class="text-size-medium text-weight-bold">Jolita Svidraitė</div>
-                    <div class="text-size-medium">Baleto ir Šiuolaikinio Šokio Mokytoja</div>
-                  </div>
-                </div>
-              </div>
-              <div class="padding-top padding-medium">
-                <a href="mokytojai.html" class="button-secondary w-button">Susipažink su mūsų mokytojais</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
       <section class="section_form">
         <div id="form" class="padding-global">
           <div class="container-large">
@@ -377,7 +277,7 @@ margin: 0rem !important;
                   <div>Manufaktūrų g. 16, Vilnius, 11342 Vilniaus m. sav.</div>
                 </div>
                 <div id="contact2-form" class="contact2_form-wrapper w-form">
-                  <form method="post" class="contact2_form" data-netlify="true" name="wf-form-Form" data-name="Form" action="/aciu" id="wf-form-Form" redirect="https://kunu.studio/aciu" data-redirect="https://kunu.studio/aciu" data-wf-page-id="66eec62f2fa59c2dc1325447" data-wf-element-id="ca1f792b-a5d4-d265-6cb1-5636eb21a275">
+                  <form method="post" class="contact2_form" data-netlify="true" name="wf-form-Form" data-name="Form" action="/aciu" id="wf-form-Form" redirect="https://kunu.studio/aciu" data-redirect="https://kunu.studio/aciu" data-wf-page-id="671a5f0bafe22a243c3fd126" data-wf-element-id="ca1f792b-a5d4-d265-6cb1-5636eb21a275">
                     <div class="form_field-wrapper"><label for="Name-2" class="form_label">Vardas*</label><input class="form_input w-input" maxlength="256" name="Name-2" data-name="Name 2" placeholder="Jūsų vardas" type="text" id="Name-2" required=""></div>
                     <div class="form_field-wrapper"><label for="Email-2" class="form_label">El. paštas*</label><input class="form_input w-input" maxlength="256" name="Email-2" data-name="Email 2" placeholder="Jūsų el.paštas" type="email" id="Email-2" required=""></div>
                     <div id="w-node-ca1f792b-a5d4-d265-6cb1-5636eb21a27e-eb21a26f" class="form_field-wrapper"><label for="Telefonas-2" class="form_label">Telefono numeris</label><input class="form_input w-input" maxlength="256" name="Telefonas-2" data-name="Telefonas 2" placeholder="Jūsų telefonas" type="text" id="Telefonas-2"></div>
@@ -408,6 +308,27 @@ margin: 0rem !important;
                       </div>
                     </div>
                   </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section_kaip_rasti">
+        <div class="padding-global">
+          <div class="container-large">
+            <div class="padding-section-large">
+              <div class="layout2_component">
+                <div class="layout2_lokacja">
+                  <h2>Kaip mus rasti?</h2>
+                  <div class="padding-bottom padding-small"></div>
+                  <p>Kunu Studio randasi Manufaktūrų g. 16, Vilniuje. <br><br>Einant Manufaktūrų gatve pasukt į kaire ties pastatu su Harley Davidson logotipu. <br><br>Įėjimas į studiją yra iš vidinio kiemo, apėjus Harley Davidson pastatą. Studijas randasi antrame aukšte.<br><br>
+                    <a href="https://maps.app.goo.gl/pkjAKBXXCirLnpq78" target="_blank">Google žemelapio nuoroda</a>
+                  </p>
+                  <div class="padding-bottom padding-medium"></div>
+                </div>
+                <div id="w-node-bbb01085-0eec-dbc8-e361-cd23d95b615d-d95b6147" class="layout2_lokacja">
+                  <div class="w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2306.811704820083!2d25.314612277876254!3d54.67774247270527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dd956b8de532f7%3A0x5e19db2979de2867!2sKunu%20Studio!5e0!3m2!1sen!2slt!4v1729783412139!5m2!1sen!2slt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
                 </div>
               </div>
             </div>
@@ -458,7 +379,7 @@ margin: 0rem !important;
                     <a href="sokiu-studijos-nuoma-vilniuje.html" class="footer1_link">Studijos Nuoma</a>
                     <a href="mokytojai.html" class="footer1_link">Mokytojai</a>
                     <a href="projektai.html" class="footer1_link">Projektai</a>
-                    <a href="kontaktai.html" class="footer1_link">Kontaktai ir Lokacija</a>
+                    <a href="kontaktai.html" aria-current="page" class="footer1_link w--current">Kontaktai ir Lokacija</a>
                   </div>
                 </div>
               </div>
