--- a/mokytojai.html
+++ b/mokytojai.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html><!--  Last Published: Fri Oct 25 2024 09:03:30 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="66ef0c3e1663e1cc0810c3fb" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
+<html data-wf-page="671a2f56ef2a1073319a64cf" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
-  <title>Kunu Studio - Ačiū</title>
-  <meta content="Kunu Studio - Siuolaikinio Sokio Studija Vilniuje. Baleto ir siuolaikinio sokio pamokos vaikams ir suaugusiems." name="description">
-  <meta content="Kunu Studio - Ačiū" property="og:title">
-  <meta content="Kunu Studio - Siuolaikinio Sokio Studija Vilniuje. Baleto ir siuolaikinio sokio pamokos vaikams ir suaugusiems." property="og:description">
-  <meta content="https://cdn.prod.website-files.com/66eec62f2fa59c2dc13253bb/66ef0503437bd4e8eab647e7_456967253_122100798206495936_2476309423794841411_n.jpg" property="og:image">
-  <meta content="Kunu Studio - Ačiū" property="twitter:title">
-  <meta content="Kunu Studio - Siuolaikinio Sokio Studija Vilniuje. Baleto ir siuolaikinio sokio pamokos vaikams ir suaugusiems." property="twitter:description">
-  <meta content="https://cdn.prod.website-files.com/66eec62f2fa59c2dc13253bb/66ef0503437bd4e8eab647e7_456967253_122100798206495936_2476309423794841411_n.jpg" property="twitter:image">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
+  <title>Mokytojai</title>
+  <meta content="Mokytojai" property="og:title">
+  <meta content="Mokytojai" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
@@ -23,7 +16,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <link href="https://kunu.studio/aciu" rel="canonical">
+  <link href="https://kunu.studio/mokytojai" rel="canonical">
   <style>
 * {
 -webkit-font-smoothing: antialiased;
@@ -36,56 +29,10 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-W5TVWPKP');</script>
-  <!--  End Google Tag Manager  --><!--  Google Tag Manager  -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-W5TVWPKP');</script>
   <!--  End Google Tag Manager  -->
 </head>
-<body class="body">
+<body>
   <div class="page-wrapper">
-    <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-out" role="banner" class="nav3_component w-nav">
-      <div class="nav3_container">
-        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
-        <nav role="navigation" class="nav3_menu w-nav-menu">
-          <div data-hover="false" data-delay="0" class="nav3_dropdown w-dropdown">
-            <div class="nav3_dropdown_toggle w-dropdown-toggle">
-              <div class="nav3_link">Šokio Pamokos</div>
-              <div class="nav3_dropdown_icon w-embed"><svg height="100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M4.42678 7.42678L7.82326 10.8232C7.92089 10.9209 8.07918 10.9209 8.17681 10.8232L11.5732 7.42678C11.7307 7.26928 11.6192 7 11.3964 7H4.60356C4.38083 7 4.26929 7.26929 4.42678 7.42678Z" fill="currentcolor"></path>
-                </svg></div>
-            </div>
-            <nav class="nav3_dropdown_list w-dropdown-list">
-              <a href="sokio-pamokos.html" class="nav3_link w-dropdown-link">šokio Stiliai ir Pamokos</a>
-              <a href="siuolaikinio-sokio-pamokos.html" class="nav3_link w-dropdown-link">Šiuolaikinio Šokio Pamokos</a>
-              <a href="baleto-pamokos.html" class="nav3_link w-dropdown-link">Baleto Pamokos</a>
-              <a href="privacios-sokio-pamokos-ir-choreografija.html" class="nav3_link w-dropdown-link">Privačios Pamokos</a>
-              <a href="https://vestuviniaisokiai.lt" target="_blank" class="nav3_link new_page w-dropdown-link">Vestuvinio Šokio Pamokos</a>
-            </nav>
-          </div>
-          <a href="tvarkarastis.html" class="nav3_link w-inline-block">
-            <div>Tvarkaraštis</div>
-          </a>
-          <a href="sokiu-pamoku-kainos.html" class="nav3_link w-inline-block">
-            <div>Kainos</div>
-          </a>
-          <a href="sokiu-studijos-nuoma-vilniuje.html" class="nav3_link w-inline-block">
-            <div>Studijos Nuoma</div>
-          </a>
-          <a href="projektai.html" class="nav3_link w-inline-block">
-            <div>PRojektai</div>
-          </a>
-          <a href="kontaktai.html" class="nav3_link w-inline-block">
-            <div>Kontaktai</div>
-          </a>
-        </nav>
-        <div class="nav3_menu_button w-nav-button">
-          <div class="nav3_menu_icon w-icon-nav-menu"></div>
-        </div>
-      </div>
-    </div>
     <div class="styles w-embed">
       <style>
 /* Make text look crisper and more legible in all browsers */
@@ -254,19 +201,108 @@ margin: 0rem !important;
 }
 </style>
     </div>
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-out" role="banner" class="nav3_component w-nav">
+      <div class="nav3_container">
+        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
+        <nav role="navigation" class="nav3_menu w-nav-menu">
+          <div data-hover="false" data-delay="0" class="nav3_dropdown w-dropdown">
+            <div class="nav3_dropdown_toggle w-dropdown-toggle">
+              <div class="nav3_link">Šokio Pamokos</div>
+              <div class="nav3_dropdown_icon w-embed"><svg height="100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M4.42678 7.42678L7.82326 10.8232C7.92089 10.9209 8.07918 10.9209 8.17681 10.8232L11.5732 7.42678C11.7307 7.26928 11.6192 7 11.3964 7H4.60356C4.38083 7 4.26929 7.26929 4.42678 7.42678Z" fill="currentcolor"></path>
+                </svg></div>
+            </div>
+            <nav class="nav3_dropdown_list w-dropdown-list">
+              <a href="sokio-pamokos.html" class="nav3_link w-dropdown-link">šokio Stiliai ir Pamokos</a>
+              <a href="siuolaikinio-sokio-pamokos.html" class="nav3_link w-dropdown-link">Šiuolaikinio Šokio Pamokos</a>
+              <a href="baleto-pamokos.html" class="nav3_link w-dropdown-link">Baleto Pamokos</a>
+              <a href="privacios-sokio-pamokos-ir-choreografija.html" class="nav3_link w-dropdown-link">Privačios Pamokos</a>
+              <a href="https://vestuviniaisokiai.lt" target="_blank" class="nav3_link new_page w-dropdown-link">Vestuvinio Šokio Pamokos</a>
+            </nav>
+          </div>
+          <a href="tvarkarastis.html" class="nav3_link w-inline-block">
+            <div>Tvarkaraštis</div>
+          </a>
+          <a href="sokiu-pamoku-kainos.html" class="nav3_link w-inline-block">
+            <div>Kainos</div>
+          </a>
+          <a href="sokiu-studijos-nuoma-vilniuje.html" class="nav3_link w-inline-block">
+            <div>Studijos Nuoma</div>
+          </a>
+          <a href="projektai.html" class="nav3_link w-inline-block">
+            <div>PRojektai</div>
+          </a>
+          <a href="kontaktai.html" class="nav3_link w-inline-block">
+            <div>Kontaktai</div>
+          </a>
+        </nav>
+        <div class="nav3_menu_button w-nav-button">
+          <div class="nav3_menu_icon w-icon-nav-menu"></div>
+        </div>
+      </div>
+    </div>
     <main class="main-wrapper">
-      <section class="section_layout5">
-        <div class="layout5_component">
-          <div class="layout5_background">
-            <div class="padding-global">
-              <div class="home_box">
-                <div class="container-small">
-                  <div class="text-align-center">
-                    <h1 class="heading-style-h1 text-style-allcaps">Ačiū, Greitu Metu Susieksime!</h1>
-                    <div class="padding-bottom padding-small"></div>
-                    <div class="padding-bottom padding-medium"></div>
-                  </div>
+      <section class="section_layout9">
+        <div class="padding-global">
+          <div class="container-large"></div>
+        </div>
+      </section>
+      <section class="section_hero-secondary">
+        <div class="padding-global">
+          <div class="container-large">
+            <h1 class="padding-bottom padding-large">Kunu Studio Vilnius Mokytojai</h1>
+            <div class="padding-section-large">
+              <div class="layout2_component">
+                <div class="layout2_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.33.20.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, 44vw" srcset="images/Screenshot-2024-09-21-at-18.33.20-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.33.20-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.33.20.jpg 922w" alt="Egle Ukanyte" class="layout2_image"></div>
+                <div class="layout2_content">
+                  <h2>Eglė Ukanytė</h2>
+                  <h5>Studijos Įkūrėja, Choreografė ir Baleto bei Šiuolaikinio Šokio Mokytoja</h5>
+                  <div class="padding-bottom padding-small"></div>
+                  <p>Eglė yra studijos įkūrėja ir laisvai samdoma šokio menininkė ir choreografė. 2020 m. Eglė baigė Lietuvos muzikos ir teatro akademiją, kur įgijo teatro meno magistro laipsnį. Bakalauro studijų metais pusę metų praleido mainų studijose Romoje, stažavosi Milane, Italijoje. Tuo metu taip pat dirbo teatre šokio atlikėja. 2023 m. rudenį įkūrė jaunimo šokio teatrą Kun/u.<br><br>Egle turi 8 m. patirtį mokant vaikus. Eglė yra įgijusi stiprius šokio pagrindus: šiuolaikinio šokio, tautinio bei baleto žanrų, šoko teatre bei įv. projektuose, miuzikluose. Skirtingus šokio stilius šoko nuo vaikystės, baigė choreografijos mokyklą bei šokio studijas Lietuvoje bei Italijoje.Eglė savo pamokose didelį dėmesį skiria vaizduotės bei kūrybiškumo lavinimui, naudoja šiuolaikinius mokymo metodus.</p>
+                  <div class="padding-bottom padding-medium"></div>
                 </div>
+              </div>
+            </div>
+          </div>
+          <div class="container-large">
+            <div class="padding-section-large">
+              <div class="layout2_component">
+                <div class="mokytojai_image-wrapper"><img src="images/Screenshot-2024-09-21-at-19.03.59_1.webp" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, 44vw" srcset="images/Screenshot-2024-09-21-at-19.03.59_1Screenshot-2024-09-21-at-19.03.59.webp 500w, images/Screenshot-2024-09-21-at-19.03.59_1.webp 660w" alt="" class="layout2_image"></div>
+                <div class="layout2_content">
+                  <h2>Eglė Kraujalė</h2>
+                  <h5>Šokio Judesio Praktikos Mokytoja</h5>
+                  <div class="padding-bottom padding-small"></div>
+                  <p>Eglės požiūris į šokį kaip identiteto ir kūrybinės išraiškos formą išryškina kūno kaip komunikacijos priemonės svarbą. Ji pabrėžia, kad mūsų kūnai perteikia emocijas ir patirtis, kurios negali būti visiškai apibūdintos žodžiais. <br><br>Šokis tampa ne tik judesiu, bet ir istorijų, pojūčių ir nuotaikų raiška, leidžiančia geriau suprasti save ir aplinkinius. Tai kvietimas giliau pažvelgti į kūno kalbą ir jos galimybes, kurios atskleidžia daugelį sluoksnių mūsų patirties.<br><br>,,Savo pamokose kviečiu atverti duris į savo kūnus ir pažinti save vis giliau. Pamokų metu naudoju meditacijos formas, kūrybines užduotis, improvizaciją, skatinu lavinti lankstumą ir taip pat taikau terapinius metodus, kurių šiuo metu mokaus Integruoto kūno judesio terapijos institute (IBMT). Esu sukaupus 25 mętu šokio patirtį, daugiausiai jos turiu ties šiuolaikiniu šokiu, esu baigusi šokio pedagogikos studijas Vilniuje bei Portugalijoje. Vedžiau gimnastikos, oro gimnastikos, šiuolaikinio šokio pamokas vaikams ir suaugusiems.”</p>
+                  <div class="padding-bottom padding-medium"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="container-large">
+            <div class="padding-section-large">
+              <div class="layout2_component">
+                <div class="layout2_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.59.42_1.webp" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, 44vw" srcset="images/Screenshot-2024-09-21-at-18.59.42_1Screenshot-2024-09-21-at-18.59.42.webp 500w, images/Screenshot-2024-09-21-at-18.59.42_1.webp 591w" alt="" class="layout2_image"></div>
+                <div class="layout2_content">
+                  <h2><strong>Jolita Svidraitė</strong></h2>
+                  <h5><strong>Baleto ir Šiuolaikinio Šokio Mokytoja</strong></h5>
+                  <div class="padding-bottom padding-small"></div>
+                  <p>,,Esu aukštos kvalifikacijos ir įvairiapusė šokėja, turinti tvirtą pagrindą tiek klasikinio, tiek šiuolaikinio šokio srityse. Įgijau šokio menininko diplomą Nacionalinėje M. K. Čiurlionio menų mokykloje, kurioje mokiausi nuo 2012 iki 2021 metų. Neseniai baigiau šokio bakalauro studijas Barselonos Menų institute, bendradarbiaujant su Liverpulio John Moores universitetu (2021-2024).”</p>
+                  <div class="padding-bottom padding-medium"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section_ctabox">
+        <div class="padding-global">
+          <div class="container-medium">
+            <div class="padding-section-large">
+              <div class="layout13_component">
+                <div class="layout13_content-wrapper">
+                  <h2>Norite tapti mūsų studijos nariu?</h2>
+                </div>
+                <a href="tvarkarastis.html" class="button w-button">Tvarkaraštis ir Registracija</a>
               </div>
             </div>
           </div>
@@ -314,7 +350,7 @@ margin: 0rem !important;
                     <a href="sokiu-pamoku-kainos.html" class="footer1_link">Šokių Pamokų Kainos</a>
                     <a href="tvarkarastis.html" class="footer1_link">Tvarkaraštis ir Registracija</a>
                     <a href="sokiu-studijos-nuoma-vilniuje.html" class="footer1_link">Studijos Nuoma</a>
-                    <a href="mokytojai.html" class="footer1_link">Mokytojai</a>
+                    <a href="mokytojai.html" aria-current="page" class="footer1_link w--current">Mokytojai</a>
                     <a href="projektai.html" class="footer1_link">Projektai</a>
                     <a href="kontaktai.html" class="footer1_link">Kontaktai ir Lokacija</a>
                   </div>
