--- a/projektai.html
+++ b/projektai.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html><!--  Last Published: Fri Oct 25 2024 09:03:30 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="66ef0c3e1663e1cc0810c3fb" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
+<html data-wf-page="671a36f7f4dc21db3a18e64f" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
-  <title>Kunu Studio - Ačiū</title>
-  <meta content="Kunu Studio - Siuolaikinio Sokio Studija Vilniuje. Baleto ir siuolaikinio sokio pamokos vaikams ir suaugusiems." name="description">
-  <meta content="Kunu Studio - Ačiū" property="og:title">
-  <meta content="Kunu Studio - Siuolaikinio Sokio Studija Vilniuje. Baleto ir siuolaikinio sokio pamokos vaikams ir suaugusiems." property="og:description">
-  <meta content="https://cdn.prod.website-files.com/66eec62f2fa59c2dc13253bb/66ef0503437bd4e8eab647e7_456967253_122100798206495936_2476309423794841411_n.jpg" property="og:image">
-  <meta content="Kunu Studio - Ačiū" property="twitter:title">
-  <meta content="Kunu Studio - Siuolaikinio Sokio Studija Vilniuje. Baleto ir siuolaikinio sokio pamokos vaikams ir suaugusiems." property="twitter:description">
-  <meta content="https://cdn.prod.website-files.com/66eec62f2fa59c2dc13253bb/66ef0503437bd4e8eab647e7_456967253_122100798206495936_2476309423794841411_n.jpg" property="twitter:image">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
+  <title>Projektai</title>
+  <meta content="Projektai" property="og:title">
+  <meta content="Projektai" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
@@ -23,7 +16,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <link href="https://kunu.studio/aciu" rel="canonical">
+  <link href="https://kunu.studio/projektai" rel="canonical">
   <style>
 * {
 -webkit-font-smoothing: antialiased;
@@ -36,56 +29,10 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-W5TVWPKP');</script>
-  <!--  End Google Tag Manager  --><!--  Google Tag Manager  -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-W5TVWPKP');</script>
   <!--  End Google Tag Manager  -->
 </head>
-<body class="body">
+<body>
   <div class="page-wrapper">
-    <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-out" role="banner" class="nav3_component w-nav">
-      <div class="nav3_container">
-        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
-        <nav role="navigation" class="nav3_menu w-nav-menu">
-          <div data-hover="false" data-delay="0" class="nav3_dropdown w-dropdown">
-            <div class="nav3_dropdown_toggle w-dropdown-toggle">
-              <div class="nav3_link">Šokio Pamokos</div>
-              <div class="nav3_dropdown_icon w-embed"><svg height="100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M4.42678 7.42678L7.82326 10.8232C7.92089 10.9209 8.07918 10.9209 8.17681 10.8232L11.5732 7.42678C11.7307 7.26928 11.6192 7 11.3964 7H4.60356C4.38083 7 4.26929 7.26929 4.42678 7.42678Z" fill="currentcolor"></path>
-                </svg></div>
-            </div>
-            <nav class="nav3_dropdown_list w-dropdown-list">
-              <a href="sokio-pamokos.html" class="nav3_link w-dropdown-link">šokio Stiliai ir Pamokos</a>
-              <a href="siuolaikinio-sokio-pamokos.html" class="nav3_link w-dropdown-link">Šiuolaikinio Šokio Pamokos</a>
-              <a href="baleto-pamokos.html" class="nav3_link w-dropdown-link">Baleto Pamokos</a>
-              <a href="privacios-sokio-pamokos-ir-choreografija.html" class="nav3_link w-dropdown-link">Privačios Pamokos</a>
-              <a href="https://vestuviniaisokiai.lt" target="_blank" class="nav3_link new_page w-dropdown-link">Vestuvinio Šokio Pamokos</a>
-            </nav>
-          </div>
-          <a href="tvarkarastis.html" class="nav3_link w-inline-block">
-            <div>Tvarkaraštis</div>
-          </a>
-          <a href="sokiu-pamoku-kainos.html" class="nav3_link w-inline-block">
-            <div>Kainos</div>
-          </a>
-          <a href="sokiu-studijos-nuoma-vilniuje.html" class="nav3_link w-inline-block">
-            <div>Studijos Nuoma</div>
-          </a>
-          <a href="projektai.html" class="nav3_link w-inline-block">
-            <div>PRojektai</div>
-          </a>
-          <a href="kontaktai.html" class="nav3_link w-inline-block">
-            <div>Kontaktai</div>
-          </a>
-        </nav>
-        <div class="nav3_menu_button w-nav-button">
-          <div class="nav3_menu_icon w-icon-nav-menu"></div>
-        </div>
-      </div>
-    </div>
     <div class="styles w-embed">
       <style>
 /* Make text look crisper and more legible in all browsers */
@@ -254,19 +201,90 @@ margin: 0rem !important;
 }
 </style>
     </div>
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-out" role="banner" class="nav3_component w-nav">
+      <div class="nav3_container">
+        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
+        <nav role="navigation" class="nav3_menu w-nav-menu">
+          <div data-hover="false" data-delay="0" class="nav3_dropdown w-dropdown">
+            <div class="nav3_dropdown_toggle w-dropdown-toggle">
+              <div class="nav3_link">Šokio Pamokos</div>
+              <div class="nav3_dropdown_icon w-embed"><svg height="100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M4.42678 7.42678L7.82326 10.8232C7.92089 10.9209 8.07918 10.9209 8.17681 10.8232L11.5732 7.42678C11.7307 7.26928 11.6192 7 11.3964 7H4.60356C4.38083 7 4.26929 7.26929 4.42678 7.42678Z" fill="currentcolor"></path>
+                </svg></div>
+            </div>
+            <nav class="nav3_dropdown_list w-dropdown-list">
+              <a href="sokio-pamokos.html" class="nav3_link w-dropdown-link">šokio Stiliai ir Pamokos</a>
+              <a href="siuolaikinio-sokio-pamokos.html" class="nav3_link w-dropdown-link">Šiuolaikinio Šokio Pamokos</a>
+              <a href="baleto-pamokos.html" class="nav3_link w-dropdown-link">Baleto Pamokos</a>
+              <a href="privacios-sokio-pamokos-ir-choreografija.html" class="nav3_link w-dropdown-link">Privačios Pamokos</a>
+              <a href="https://vestuviniaisokiai.lt" target="_blank" class="nav3_link new_page w-dropdown-link">Vestuvinio Šokio Pamokos</a>
+            </nav>
+          </div>
+          <a href="tvarkarastis.html" class="nav3_link w-inline-block">
+            <div>Tvarkaraštis</div>
+          </a>
+          <a href="sokiu-pamoku-kainos.html" class="nav3_link w-inline-block">
+            <div>Kainos</div>
+          </a>
+          <a href="sokiu-studijos-nuoma-vilniuje.html" class="nav3_link w-inline-block">
+            <div>Studijos Nuoma</div>
+          </a>
+          <a href="projektai.html" aria-current="page" class="nav3_link w-inline-block w--current">
+            <div>PRojektai</div>
+          </a>
+          <a href="kontaktai.html" class="nav3_link w-inline-block">
+            <div>Kontaktai</div>
+          </a>
+        </nav>
+        <div class="nav3_menu_button w-nav-button">
+          <div class="nav3_menu_icon w-icon-nav-menu"></div>
+        </div>
+      </div>
+    </div>
     <main class="main-wrapper">
-      <section class="section_layout5">
-        <div class="layout5_component">
-          <div class="layout5_background">
-            <div class="padding-global">
-              <div class="home_box">
-                <div class="container-small">
-                  <div class="text-align-center">
-                    <h1 class="heading-style-h1 text-style-allcaps">Ačiū, Greitu Metu Susieksime!</h1>
-                    <div class="padding-bottom padding-small"></div>
-                    <div class="padding-bottom padding-medium"></div>
-                  </div>
+      <section class="section_layout9">
+        <div class="padding-global">
+          <div class="container-large"></div>
+        </div>
+      </section>
+      <section class="section_hero-secondary">
+        <div class="padding-global">
+          <div class="container-large">
+            <h1 class="padding-bottom padding-large">Kunu Studio Projektai</h1>
+            <div class="padding-section-large">
+              <div class="layout2_component">
+                <div class="layout2_image-wrapper"><img src="images/Screenshot-2024-10-25-at-11.45.47.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, 44vw" srcset="images/Screenshot-2024-10-25-at-11.45.47.jpg 500w, images/Screenshot-2024-10-25-at-11.45.47.jpg 800w, images/Screenshot-2024-10-25-at-11.45.47.jpg 1080w, images/Screenshot-2024-10-25-at-11.45.47.jpg 1600w, images/Screenshot-2024-10-25-at-11.45.47.jpg 1929w" alt="Kunu Studio - Koletyvine Samone" class="layout2_image"></div>
+                <div class="layout2_content">
+                  <h2>Kunu Šokio Teatras - Kolektyvinė Sąmonė</h2>
+                  <div class="padding-bottom padding-small"></div>
+                  <p>Tai užburiantis šokio spektaklis, tyrinėjantis kolektyvinės sąmonės temą, šokio kalbą sujungiantis su turtingais bendrų patirčių pasakojimais. Asmenys jungiasi į darnų kolektyvą, pavargę nuo savo ir kitų individualumą atveriančių idėjų. Choreografija atsiskleidžia kaip gyvas, kvėpuojantis organizmas – solidarumo požiūrių ir bendrų normų apraiška. Nuo subtilių gestų iki dinamiškų grupinių judesių – šokėjai juda vieningai, išreikšdami kolektyvinio proto minčių ir emocijų atoslūgį ir srautą. Šokis atspindi vienybės esmę, vaizduodamas, kaip individai prisideda prie kolektyvinės tapatybės, išsaugodami savo unikalias savybes. „Memai“, kultūros fragmentai, kurie sklinda per visuomenę kaip bendro supratimo šnabždesiai, atgyja per dinamiškus ir užkrečiamus judesius. Šokis tampa pokalbiu tarp savęs ir bendruomenės, iliustruojančių subtilią autonomijos ir bendrumo pusiausvyrą.</p>
+                  <div class="padding-bottom padding-medium"></div>
                 </div>
+              </div>
+            </div>
+            <div class="padding-section-large">
+              <div class="layout2_component">
+                <div class="layout2_image-wrapper"><img src="images/Screenshot-2024-10-25-at-11.42.51.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, 44vw" srcset="images/Screenshot-2024-10-25-at-11.42.51.jpg 500w, images/Screenshot-2024-10-25-at-11.42.51.jpg 800w, images/Screenshot-2024-10-25-at-11.42.51.jpg 1080w, images/Screenshot-2024-10-25-at-11.42.51.jpg 1600w, images/Screenshot-2024-10-25-at-11.42.51.jpg 1919w" alt="Young Artist Platform Event Poster" class="layout2_image"></div>
+                <div class="layout2_content">
+                  <h2>Young Artist Platform (YAP)</h2>
+                  <div class="padding-bottom padding-small"></div>
+                  <p>„Young Artist Platform“ – tai erdvė, kurioje jaunieji Lietuvos kūrėjai, pasitelkę savo unikalią kūrybos kalbą, dalijasi požiūriu į pasaulį ir šių dienų aktualijas, atkreipdami dėmesį į tai, kas mus supa kasdien, tačiau nėra matoma kiekvienam. Hipnotizuojančios muzikos, šokio ir meno derinys privers susimąstyti, sukels klausimų ir pateiks atsakymų, o svarbiausia – nukels į mistinę visatą, kurioje klesti meno draugystė.</p>
+                  <div class="padding-bottom padding-medium"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section_ctabox">
+        <div class="padding-global">
+          <div class="container-medium">
+            <div class="padding-section-large">
+              <div class="layout13_component">
+                <div class="layout13_content-wrapper">
+                  <h2>Norite tapti mūsų studijos nariu?</h2>
+                </div>
+                <a href="tvarkarastis.html" class="button w-button">Tvarkaraštis ir Registracija</a>
               </div>
             </div>
           </div>
@@ -315,7 +333,7 @@ margin: 0rem !important;
                     <a href="tvarkarastis.html" class="footer1_link">Tvarkaraštis ir Registracija</a>
                     <a href="sokiu-studijos-nuoma-vilniuje.html" class="footer1_link">Studijos Nuoma</a>
                     <a href="mokytojai.html" class="footer1_link">Mokytojai</a>
-                    <a href="projektai.html" class="footer1_link">Projektai</a>
+                    <a href="projektai.html" aria-current="page" class="footer1_link w--current">Projektai</a>
                     <a href="kontaktai.html" class="footer1_link">Kontaktai ir Lokacija</a>
                   </div>
                 </div>
